# PAYTKN

./: FYDP_Report.md  FYDP_Report_FINAL.docx  GreyHatFinance_PitchDeck  -  Repaired.pptx  GreyHatFinance_PitchDeck.pptx  START_ALL.bat  START_DEMO.ps1  Tokenomic FYP.xlsx  make_report.py
.claude/: settings.local.json
Data/: gen_charts.py  stress_results.json
chainenv/: .gitignore  pyproject.toml
chainenv/scripts/: evaluate.py  fetch_market_data.py  historical_eval.py  model_server.py  montecarlo_eval.py  projections.py  stress_test.py  train.py  visualize.py
chainenv/src/chainenv/: __init__.py  actions.py  config.py  economy.py  entities.py  env.py  population.py  profiles.py  real_sentiment.py  sentiment.py
chainenv/tests/: test_config.py  test_economy.py  test_entities.py  test_env.py  test_population.py  test_profiles.py  test_sentiment.py
models_v4/models/: eval_results.json
paytkn-backend/: .env  config.py  contracts.py  deployed-addresses.json  main.py  requirements.txt
paytkn-backend/abis/: MerchantStaking.json  PaytknStaking.json  PaytknToken.json  PaytknTreasury.json  RewardEngine.json
paytkn-backend/routers/: agent.py  demo.py  payments.py  protocol.py  simulation.py  staking.py  users.py
paytkn-contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
paytkn-contracts/contracts/: MerchantStaking.sol  PaytknGateway.sol  PaytknStaking.sol  PaytknToken.sol  PaytknTreasury.sol  (+1 more)
paytkn-frontend/: next.config.ts  package-lock.json  package.json
paytkn-model/: model_server.py
paytkn-store/: index.html  serve.py
(+25 files in other folders)
