[project]
name = "chainenv"
version = "0.1.0"
description = "Agent-based tokenomics simulator and RL training environment"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
